--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>臭屁吴晗</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="1.css">
 </head>
 
 <body>
@@ -55,10 +55,14 @@
         </div>
     </nav>
     超级无敌大臭屁
+    <h1>123</h1>
+    <h2>321</h2>
+    <button onclick="name1('maskman')">OK</button>
+    <button onclick="name1('wuhanstudio')">OK</button>
+    <script src="1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
